Changes for 2.1.7

New features:
..F....... [ZBX-6911] added functionality to save positions of block on dashboard page in profiles table (Vitalij)

Bug fixes:
..F....... [ZBX-7082] fixed not being able to create dependencies between template triggers (Ivo)
A.F....... [ZBX-7053] fixed errors when deleting a script linked to action operation and fixed type-specific operation command properties not being reset when changing type (Ivo)
..F....... [ZBX-7058] fixed repeated global search with same value (Eduard)
...GI..PS. [ZBX-7061] fixed warnings produced by clang static analyzer (asaveljevs)
..F....... [ZBX-6873] fixed pagination issue after deleting an object through form (Ivo)
..F....... [ZBX-7050] fixed output of empty HTML attributes (Ivo)
A.F....... [ZBX-7051] fixed bug, to not make updates to hosts applications, items, and triggers, if "Save" button was pressed in edit form, with no changes (Vitalij)
A.F....... [ZBX-7091] fixed SQL injection vulnerabilities in page filtering; thanks to Bernhard Schildendorfer from SEC Consult for the report (Eduard, Pavels)
A.F....... [ZBX-7091] fixed SQL injection vulnerabilities in dashboard favourite managing; thanks to Lincoln, a member of Corelan Team, for the report (Eduard, Pavels)
..F....... [ZBX-6994] fixed logic of SQL creation, removed unneeded i.flags IN (0,4) from SQL, if i.flags is set from filter or is null (Vitalij)
..F....... [ZBX-6993] fixed JS errors in various pages having a child node with high ID value (Ivo)
..F....... [ZBX-7032] fixed possibility to add "ICMP ping" check in Configuration > Discovery (Ivo)
........S. [ZBX-6904] now ESC.HISTORY macro creates the same message content whithin the same escalation step when notification is sent to multiple recipients (igors)

--------------------------------------------------------------------------------
Changes for 2.1.6

New features:
..F....... [ZBX-2616] upgraded the bundled DejaVu font from 2.33 to 2.34 (Richlv)